[gd_scene load_steps=2 format=3 uid="uid://ern8xd7qa485"]

[ext_resource type="Script" path="res://control.gd" id="1_l0l4q"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l0l4q")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 464.0
offset_right = 588.0
offset_bottom = 561.0
text = "SEND"

[node name="log" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 622.0
offset_top = 24.0
offset_right = 1134.0
offset_bottom = 624.0

[node name="message" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 156.0
offset_right = 587.0
offset_bottom = 422.0
placeholder_text = "Your message"

[node name="connect" type="Button" parent="."]
layout_mode = 0
offset_left = 321.0
offset_top = 38.0
offset_right = 467.0
offset_bottom = 84.0
text = "Subscribe"

[node name="openServer" type="Button" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 31.0
offset_right = 255.0
offset_bottom = 93.0
text = "SERVER OPEN"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="openServer" to="." method="_on_open_server_pressed"]
